--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ While many studies have looked at the association between specific criteria like
 
 
 <div>
-    <img src="C:\Users\minal\OneDrive\Desktop\Intro.jpg" alt="Image 1" width="700" height="400">
+    <img src="../Intro.jpg" alt="Image 1" width="700" height="400">
 
 </div>
 
