--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ While many studies have looked at the association between specific criteria like
 
 
 <div>
-    <img src="../Intro.jpg" alt="Image 1" width="700" height="400">
+    <img src="https://raw.githubusercontent.com/Minalspawar/ML_Project/main/Images/Intro.jpg" alt="Image 1" width="700" height="400">
 
 </div>
 
