--- a/index.html
+++ b/index.html
@@ -172,12 +172,12 @@ Data Merging:<h4> <p> After gathering the job listings, the script takes the dat
 
 <div class="image-container">
     <p class="title">Raw Data</p>
-    <img alt="UncleanedData" src="../UncleanedData.png"  width="650" height="250">
+    <img alt="UncleanedData" src="https://raw.githubusercontent.com/Minalspawar/ML_Project/main/Images/UncleanedData.png"  width="650" height="250">
 </div>
 
 <div class="image-container">
     <p class="title">Cleaned Data</p>
-    <img alt="DataCleaned" src="../DataCleaned.png"  width="700" height="250">
+    <img alt="DataCleaned" src="https://raw.githubusercontent.com/Minalspawar/ML_Project/main/Images/DataCleaned.png"  width="700" height="250">
 </div>
 
 
@@ -190,7 +190,7 @@ Data Merging:<h4> <p> After gathering the job listings, the script takes the dat
             <p>Learn how to prepare your data and perform exploratory data analysis.</p>
 
 <div>
-    <img src="../Image1.png" alt="Image 1" width="300" height="250">
+    <img src="https://raw.githubusercontent.com/Minalspawar/ML_Project/main/Images/Image1.png" alt="Image 1" width="300" height="250">
     <p>The plot helps readers comprehend how incomes vary across different experience levels by visually representing the relationship between experience levels and salaries. For every experience level, there is a bar that indicates the average income. The experience levels are displayed on the x-axis, while the matching wage levels are displayed on the y-axis. This graphic aids in spotting any trends or patterns in the distribution of salaries according to experience levels.</p>
 </div>
 
@@ -198,51 +198,51 @@ Data Merging:<h4> <p> After gathering the job listings, the script takes the dat
 <div>
 
 
-<img src="../image2.jpg" alt="image2" width="300" height="250">
+<img src="https://raw.githubusercontent.com/Minalspawar/ML_Project/main/Images/image2.jpg" alt="image2" width="300" height="250">
 <p>
 The box plot illustrates how experience levels are distributed among various job titles. The horizontal line inside each box denotes the median experience level, and each box indicates the interquartile range (IQR) of experience for a particular job title. Any outliers that fall outside of the whiskers are represented as individual points, and the whiskers extend to the lowest and greatest experience values. Understanding the differences in experience levels across various job titles and seeing any trends or outliers in the data is made easier with the aid of this graphic.
 </p>
   </div>
 
 <div>
-<img src="../image3.png" alt="image3" width="300" height="250">
+<img src="https://raw.githubusercontent.com/Minalspawar/ML_Project/main/Images/image3.png" alt="image3" width="300" height="250">
 <p>The distribution of company names across various areas is visually represented by the count plot. Every bar depicts the number of a certain firm name, and each company name is further classified according to its location; varying colors denote distinct locations. Understanding the distribution of businesses across different places and spotting trends or anomalies in the data are made easier with the aid of this graphic.
 </p>
   </div>
 
 <div>
-<img src="../image4.png" alt="image4" width="300" height="250">
+<img src="https://raw.githubusercontent.com/Minalspawar/ML_Project/main/Images/image4.png" alt="image4" width="300" height="250">
 <p>Using a pie chart, you can see how job listings are distributed among the top 5 locations with the most postings. A location is represented by each wedge in the pie chart, and the size of a wedge indicates the percentage of job listings for that location as compared to the total number of job postings in the top 5 locations. Further details regarding the distribution of job listings can be found in the percentage values that are shown on each wedge. This graphic aid makes it easy to identify areas with the greatest concentration of employment prospects.</p>
   </div>
 <div>
 
-<img src="../image5.png" alt="image5" width="300" height="250">
+<img src="https://raw.githubusercontent.com/Minalspawar/ML_Project/main/Images/image5.png" alt="image5" width="300" height="250">
 <p>The scatter plot illustrates how experience levels and job titles relate to one another visually. Experience level and job title are represented by each data point in the figure. Experience levels are shown on the x-axis, and job titles are shown on the y-axis. With the aid of this image, one may ascertain whether experience levels and job titles exhibit any trends or relationships. The link between continuous variables is often visualized using scatter plots, thus it's important to keep in mind that employing job titles as categorical variables on the y-axis may not yield useful insights in this circumstance. </p>
   </div>
 
 <div>
-<img src="../image6.png" alt="image6" width="300" height="250">
+<img src="https://raw.githubusercontent.com/Minalspawar/ML_Project/main/Images/image6.png" alt="image6" width="300" height="250">
 <p>The box plot illustrates how experience levels are distributed throughout various areas. For a given region, each box shows the interquartile range (IQR) of experience. The horizontal line inside the box reflects the median experience level. Any outliers that fall outside of the whiskers are represented as individual points, and the whiskers extend to the lowest and greatest experience values. Understanding the differences in experience levels between various areas and seeing any anomalies or trends in the data are made easier with the aid of this graphic.</p>
 
   </div>
 <div>
-<img src="../image7.png" alt="image7" width="300" height="250">
+<img src="https://raw.githubusercontent.com/Minalspawar/ML_Project/main/Images/image7.png" alt="image7" width="300" height="250">
 <p> The distribution of the top 5 job titles is shown graphically via the donut chart. The size of each segment of the chart, which represents a job title, is correlated with the number of occurrences in the dataset. To create the donut look, draw a white circle with a hole in the middle of the pie chart. The most popular job titles and their proportional proportions within the dataset can be easily identified with the aid of this graphic.</p>
   </div>
 
 <div>
-<img src="../image8.png" alt="image8" width="300" height="250">
+<img src="https://raw.githubusercontent.com/Minalspawar/ML_Project/main/Images/image8.png" alt="image8" width="300" height="250">
 <p>The word cloud provides a visual representation of the skills described in the dataset. The frequency with which a skill appears in the dataset is indicated by the size of each word in the cloud. Greater prominence in the visualization will be given to skills that are displayed in greater text sizes. Word clouds can be used to quickly determine which abilities are most common and to provide information about the distribution of skills overall in the dataset. </p>
 
   </div>
 <div>
 
-<img src="../image9.png" alt="image9" width="300" height="250">
+<img src="https://raw.githubusercontent.com/Minalspawar/ML_Project/main/Images/image9.png" alt="image9" width="300" height="250">
 <p> The horizontal bar plot shows how job ads are distributed throughout various areas. The number of job ads for a certain location is shown by each bar. The number of job ads for that location increases with the length of the bar. This visualization offers insights into the geographic distribution of job opportunities within the dataset and aids in rapidly identifying the places with the highest and lowest numbers of job listings.</p>
   </div>
 <div>
 
-<img src="../image10.png" alt="image10" width="300" height="250">
+<img src="https://raw.githubusercontent.com/Minalspawar/ML_Project/main/Images/image10.png" alt="image10" width="300" height="250">
 <p>The top 5 firms' job posting distribution is visually represented by the pie chart. The size of each wedge in the pie chart indicates the percentage of job listings for that company compared to the total number of job ads in the top 5 companies. Each wedge represents a company. Further details regarding the distribution of job listings can be found in the percentage labels that are shown on each wedge. It is easier to immediately identify which organizations offer the greatest concentration of job opportunities with the aid of this graphic. </p>
   </div>
         </div>
