--- a/index.html
+++ b/index.html
@@ -197,8 +197,7 @@ Data Merging:<h4> <p> After gathering the job listings, the script takes the dat
 
 <div>
 
-
-<img src="https://raw.githubusercontent.com/Minalspawar/ML_Project/main/Images/image2.jpg" alt="image2" width="300" height="250">
+<img src="https://raw.githubusercontent.com/Minalspawar/ML_Project/main/Images/image2.png" alt="image2" width="300" height="250">
 <p>
 The box plot illustrates how experience levels are distributed among various job titles. The horizontal line inside each box denotes the median experience level, and each box indicates the interquartile range (IQR) of experience for a particular job title. Any outliers that fall outside of the whiskers are represented as individual points, and the whiskers extend to the lowest and greatest experience values. Understanding the differences in experience levels across various job titles and seeing any trends or outliers in the data is made easier with the aid of this graphic.
 </p>
